--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+#Add TuanQuynh User Bundle Routing
+tuanquynh_user:
+    resource: "@TuanQuynhUserBundle/Resources/config/routing.yml"
+    prefix:   /
