--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,12 +4,11 @@ security:
 
     encoders:
         TuanQuynh\UserBundle\Entity\User: bcrypt
+
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        our_db_provider:
-            entity:
-                class: TuanQuynhUserBundle:User
-                property: username
+        in_memory:
+            memory: ~
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -18,9 +17,7 @@ security:
             security: false
 
         main:
-            pattern:    ^/
-            http_basic: ~
-            provider: our_db_provider
+            anonymous: ~
             # activate different ways to authenticate
 
             # http_basic: ~
