--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "tuanquynh/user-bundle" : "dev-master"
+        "tuanquynh/user-bundle" : "dev-master",
+        "lexik/jwt-authentication-bundle": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
